--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - 8004:8000
     environment:
       - DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/foo
+      - YOUTUBE_API_KEY=${YOUTUBE_API_KEY}
     depends_on:
       - db
 
