--- a/project/requirements.txt
+++ b/project/requirements.txt
@@ -4,3 +4,6 @@ fastapi==0.100.0
 sqlmodel==0.0.8
 uvicorn==0.22.0
 google-api-python-client==2.95.0
+pytube==15.0.0
+shazamio==0.4.0.1
+pydub==0.25.1
